# TinyC_Compiler

./: .gitignore  CMakeLists.txt  CODE_REVIEW.md  FUTURE_IMPROVEMENTS.md  ISSUES_FIXED.md  README.md
src/: ast.h  codegen.cpp  codegen.h  lexer.l  main.cpp  parser.y
tests/: run_tests.sh  test3.tiny  test4.tiny  test5.tiny
